# vcpkg-app

./: CMakeLists.txt  main.cpp  vcpkg.json
